User profile process. Step - 6

--- a/wp-content/themes/alicelf-adaptive/composer.json
+++ b/wp-content/themes/alicelf-adaptive/composer.json
@@ -18,6 +18,7 @@
       "inc/theme_metaboxes.php",
       "inc/thumbnails.php",
       "inc/widget_sidebars.php",
+      "inc/attachments.php",
       "inc/user.php",
       "inc/form-processors.php",
 
