Login and Registration with email validation in frontend

--- a/wp-content/themes/alicelf-adaptive/composer.json
+++ b/wp-content/themes/alicelf-adaptive/composer.json
@@ -21,6 +21,7 @@
       "inc/attachments.php",
       "inc/user.php",
       "inc/form-processors.php",
+      "inc/registration_login.php",
 
       "ajax.php"
 
