--- a/wp-content/themes/alicelf-adaptive/composer.json
+++ b/wp-content/themes/alicelf-adaptive/composer.json
@@ -22,6 +22,7 @@
       "inc/user.php",
       "inc/form-processors.php",
       "inc/registration_login.php",
+      "inc/media-uploader.php",
 
       "ajax.php"
 
