Menu Fixes @TODO: create upload files

--- a/wp-content/themes/alicelf-adaptive/composer.json
+++ b/wp-content/themes/alicelf-adaptive/composer.json
@@ -7,6 +7,7 @@
       "theme_init/config.php",
 
       "walkers/AliceNavigator.php",
+      "walkers/custom_menu_actions.php",
       "walkers/CustomFieldsMenu.php",
       "walkers/BootstrapWalker.php",
 
