--- a/wp-content/themes/alicelf-adaptive/composer.json
+++ b/wp-content/themes/alicelf-adaptive/composer.json
@@ -11,7 +11,6 @@
       "walkers/CustomFieldsMenu.php",
       "walkers/BootstrapWalker.php",
 
-      "inc/custom_posts_config.php",
       "inc/dynamic_styles.php",
       "inc/menus.php",
       "inc/shortcodes.php",
@@ -35,5 +34,6 @@
     }
   },
   "require": {
+    "guzzlehttp/guzzle": "~6.0"
   }
 }
