Theme updated to 3.6 @TODO: add popup func-ty @TODO: create upload files @TODO: add angular

--- a/wp-content/plugins/aa_payment/composer.json
+++ b/wp-content/plugins/aa_payment/composer.json
@@ -2,7 +2,8 @@
   "autoload": {
     "files" : [
       "ajax.php",
-      "PaypalScope/run.php"
+      "PaypalScope/run.php",
+      "PaypalScope/shortcodes.php"
     ]
   },
     "require": {
