plugin aa_payment + acf @TODO: add popup func-ty @TODO: create upload files @TODO: add angular

--- a/wp-content/plugins/aa_payment/composer.json
+++ b/wp-content/plugins/aa_payment/composer.json
@@ -1,10 +1,18 @@
 {
   "autoload": {
+
     "files" : [
       "ajax.php",
       "PaypalScope/run.php",
-      "PaypalScope/shortcodes.php"
-    ]
+      "PaypalScope/shortcodes.php",
+      "products/product_custom_posts.php",
+      "products/orders_custom_posts.php",
+      "content_templates/attributes.php",
+      "content_templates/init.php"
+    ],
+    "psr-4": {
+      "Apayment\\": "Apayment"
+    }
   },
     "require": {
         "paypal/rest-api-sdk-php": "^1.7"
